[package]
name = "is-alive-middleware"
version = "0.4.1-rc01"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.4.1-rc01", git = "https://github.com/MyJetTools/my-http-server.git" }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }

async-trait = "*"
serde = { version = "*", features = ["derive"] }
