[package]
name = "is-alive-middleware"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.8.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "macros",
] }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }

async-trait = "*"
serde = { version = "*", features = ["derive"] }
